<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/CrearCuenta"
            android:fontFamily="@font/worksans"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="register.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/txtNombre"
                android:hint="@string/txtNombre"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:fontFamily="@font/worksans"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/txtCorreo"
                android:hint="@string/txtCorreo"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:fontFamily="@font/worksans"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassword"
                android:hint="@string/txtPassword"
                android:inputType="textPassword"
                android:padding="20dp"
                android:fontFamily="@font/worksans"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtConfigPassword"
                android:hint="@string/txtConfigPassword"
                android:inputType="textPassword"
                android:padding="20dp"
                android:fontFamily="@font/worksans"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnRegisterUser"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/worksans"
            android:text="@string/RegistrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/Tengounacuenta"
            android:text="@string/Tengounacuenta"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>