<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventoForm">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:hint="@string/TittlefrmEvento"
            android:fontFamily="@font/worksans"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="infoevent.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/txtNombreEvento"
                android:hint="@string/txtNombreEvento"
                android:inputType="textCapWords"
                android:padding="20dp"
                android:fontFamily="@font/worksans"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/txtOrganizador"
                android:hint="@string/txtOrganizador"
                android:inputType="textCapWords"
                android:padding="20dp"
                android:fontFamily="@font/worksans"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_organizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/txtDescripcion"
                android:hint="@string/txtDescripcion"
                android:padding="20dp"
                android:fontFamily="@font/worksans"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_desc"
                android:layout_marginTop="10dp"
                android:minHeight="150dp"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnShowCalendar"
                app:icon="@drawable/icon_caledar"
                android:text="@string/btnShowCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">
                <EditText
                    android:id="@+id/txtFecha"
                    android:hint="@string/txtFecha"
                    android:fontFamily="@font/worksans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_marginStart="15dp"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnShowTime"
                app:icon="@drawable/icon_time"
                android:text="@string/btnShowTime"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:padding="20dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">
                <EditText
                    android:id="@+id/txtHora"
                    android:hint="@string/txtHora"
                    android:fontFamily="@font/worksans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_marginStart="15dp"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>