<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerPerfil">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/TittleViewPerfil"
            android:fontFamily="@font/worksans"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="infouser.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">
            <TextView
                android:id="@+id/viewNombreUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/btn_EditName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EditName"
                    android:drawableLeft="@drawable/icon_editinfo"
                    android:drawablePadding="8dp"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:drawableTint="@color/colorPrimary"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viewCorreoPerfil"
                    android:textSize="16dp"
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimary"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end">
                    <TextView
                        android:id="@+id/btn_EditEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/EditEmail"
                        android:drawableLeft="@drawable/icon_editinfo"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/worksans"
                        android:textSize="16dp"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:drawableTint="@color/colorPrimary"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <TextView
                android:id="@+id/viewCorreoUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewPasswordPerfil"
                android:textSize="16dp"
                android:layout_marginTop="15dp"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:id="@+id/RestorePassword"
                android:text="@string/RestorePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>